# arclaunch

./: CMakeLists.txt  README.md  txt_readme.txt
cmake/: FindJulia.cmake  FindXSD.cmake  FindXercesC.cmake  arclaunch-config-version.cmake.in  arclaunch-config.cmake.in
examples/1_simple/: CMakeLists.txt
examples/2_single/: CMakeLists.txt
examples/2_single/xml/: launch.xml.in
examples/3_ps/: CMakeLists.txt
examples/3_ps/src/: client.c
examples/3_ps/xml/: launch.xml.in
examples/4_http/: CMakeLists.txt
examples/4_http/res/: 404.html  415.html  index.html
examples/4_http/scripts/: header_handler.pl
examples/4_http/xml/: launch.xml.in
examples/simple/xml/: launch.xml.in
examples/ws/: CMakeLists.txt
examples/ws/include/: CMakeLists.txt  binary_tree.h  encode_decode.h  http_encode_decode.h  shared_mem.h  utility.h  ws_encode_decode.h  ws_fd_connection.h  ws_fd_encode_decode.h  ws_simple_frames.h
examples/ws/scripts/: handshake.pl  world.pl
examples/ws/src/: CMakeLists.txt  decode.c  encode.c  encode_decode.c  print_pipe.c  shared_mem.c  shared_mem_manage.c  ws_trans.c
examples/ws/src/http/: decode_http_header_line.c  decode_http_request_line.c  decode_http_response_line.c  encode_http_header_line.c  encode_http_request_line.c  encode_http_response_line.c  http_method_to_str.c  str_to_http_method.c  str_to_http_version.c
examples/ws/src/utility/: reversell.c
examples/ws/src/ws/: allocate_ws_payload.c  free_ws_payload.c  get_ws_frame_mask.c  get_ws_header_size.c  get_ws_opcode.c  get_ws_packet_mask.c  get_ws_payload_size.c  make_ws_frame_final.c  make_ws_frame_non_final.c  make_ws_packet_final.c  make_ws_packet_non_final.c  mask_ws_frame.c  mask_ws_packet.c  set_ws_opcode.c  set_ws_payload_size.c  unmask_ws_frame.c  unmask_ws_packet.c  ws_frame_is_final.c  ws_frame_is_masked.c  ws_packet_is_final.c  ws_packet_is_masked.c  ws_rx_frame.c  ws_rx_packet.c  ws_tx_frame.c  ws_tx_packet.c
examples/ws/src/ws_fd/: ws_fd_client_connection.c  ws_fd_rx.c  ws_fd_server_connection.c  ws_fd_tx.c
examples/ws/src/ws_simple/: ws_simple_binary_handler.c  ws_simple_clear_buffer.c  ws_simple_close_handler.c  ws_simple_continuation_handler.c  ws_simple_ping_handler.c  ws_simple_pong_handler.c  ws_simple_text_handler.c
examples/ws/xml/: launch.xml  launch.xml.in
include/: .Node.hxx.swp  CMakeLists.txt  ExecutableNode.hxx  FileNode.hxx  GroupNode.hxx  LaunchNode.hxx  Node.hxx  NodeContext.hxx  NodeStorage.hxx  ScriptNode.hxx  SequenceNode.hxx  SocketNode.hxx  arclaunch.hxx  arclaunch.hxx.in
include/os/: linux.h  windows.h
src/: .Node.cxx.swp  .main.cxx.swp  CMakeLists.txt  ExecutableNode.cxx  FileNode.cxx  GroupNode.cxx  LaunchNode.cxx  Node.cxx  NodeContext.cxx  NodeStorage.cxx  ScriptNode.cxx  SequenceNode.cxx  SocketNode.cxx  main.cxx
src/xsd/: .launch.xsd.swp  launch.xsd  launch.xsd.in
test/: CMakeLists.txt  NodeTest.cxx  argv.cxx  drain_fd.h  empty.cxx  env.cxx  external.cxx  gtest  interpret_error.h  linkage.cxx  locations.hxx.in  network.cxx  sequence.cxx  socket.cxx  stdin.cxx  stdout.cxx  xsd.cxx
test/R/: CMakeLists.txt  R.cxx  locations.hxx.in
test/R/argv/: CMakeLists.txt
test/binary/: CMakeLists.txt  binary.cxx  locations.hxx.in
test/binary/argv/: CMakeLists.txt
test/binary/argv/src/: CMakeLists.txt  main.c
test/binary/argv/xml/: launch.xml  launch.xml.in
test/binary/env/: CMakeLists.txt
test/binary/env/src/: CMakeLists.txt  main.c
test/binary/env/xml/: launch.xml  launch.xml.in
test/binary/linkage/: CMakeLists.txt
test/binary/linkage/src/: CMakeLists.txt  from.c  to.c
test/binary/linkage/xml/: launch.xml  launch.xml.in
test/binary/sequence/: CMakeLists.txt
test/binary/sequence/src/: CMakeLists.txt  first_node.c  second_node.c
test/binary/sequence/xml/: launch.xml.in
test/binary/socket/: CMakeLists.txt
test/binary/socket/src/: CMakeLists.txt  main.c
test/binary/socket/xml/: launch.xml
test/binary/stdin/: CMakeLists.txt
test/binary/stdin/src/: CMakeLists.txt
test/binary/stdin/xml/: launch.xml  launch.xml.in
test/binary/stdout/: CMakeLists.txt
test/binary/stdout/src/: CMakeLists.txt  main.c
test/binary/stdout/xml/: launch.xml  launch.xml.in
test/julia/: CMakeLists.txt  locations.hxx.in
test/matlab/: locations.hxx.in
test/perl/: CMakeLists.txt  locations.hxx.in  perl.cxx
test/perl/argv/: CMakeLists.txt
test/perl/argv/xml/: launch.xml  launch.xml.in
test/perl/env/: CMakeLists.txt
test/perl/env/scripts/: main.pl
test/perl/env/xml/: launch.xml  launch.xml.in
test/perl/linkage/: CMakeLists.txt
test/perl/linkage/scripts/: from.pl
test/perl/linkage/xml/: launch.xml  launch.xml.in
test/perl/stdin/: CMakeLists.txt
test/perl/stdin/scripts/: main.pl
test/perl/stdin/xml/: launch.xml  launch.xml.in
test/perl/stdout/: CMakeLists.txt
test/perl/stdout/scripts/: main.pl
test/perl/stdout/xml/: launch.xml  launch.xml.in
test/python/: CMakeLists.txt  locations.hxx.in  python.cxx
test/python/argv/: CMakeLists.txt
test/python/argv/scripts/: main.py
test/python/argv/xml/: launch.xml  launch.xml.in
test/python/env/: CMakeLists.txt
test/python/env/scripts/: main.py
test/python/env/xml/: launch.xml  launch.xml.in
test/python/linkage/: CMakeLists.txt
test/python/linkage/scripts/: from.py  to.py
test/python/linkage/xml/: launch.xml  launch.xml.in
test/python/stdin/: CMakeLists.txt
test/python/stdin/scripts/: main.py
test/python/stdin/xml/: launch.xml  launch.xml.in
test/python/stdout/: CMakeLists.txt
test/python/stdout/scripts/: main.py
test/python/stdout/xml/: launch.xml  launch.xml.in
test/resources/: .basic.xml.swp  CMakeLists.txt  FileLocations.hxx.in  basic.xml
test/resources/Rargv/: CMakeLists.txt
test/resources/argv/src/: CMakeLists.txt
test/resources/argv/xml/: launch.xml
test/resources/perlargv/: CMakeLists.txt
test/resources/perlargv/scripts/: main.pl
test/resources/pyargv/: CMakeLists.txt
test/xml/: empty_launch.xml.in
