
find_package(PythonInterp)
if(PYTHONINTERP_FOUND)
  message(STATUS "Creating Python tests")
  add_subdirectory(stdout)
  add_subdirectory(argv)
  add_subdirectory(env)
  add_subdirectory(stdin)
  add_subdirectory(linkage)
else(PYTHONINTERP_FOUND)
  message(STATUS "Could not locate Python executable")
endif(PYTHONINTERP_FOUND)
