add_subdirectory(argv)
add_subdirectory(pyargv)
add_subdirectory(Rargv)
add_subdirectory(perlargv)

message(STATUS "argv binary executable:  ${ARGV_BINARY}")
message(STATUS "argv binary launch file: ${ARGV_BINARY_LAUNCH}")
message(STATUS "argv python executable:  ${ARGV_PYTHON}")
message(STATUS "argv python launch file: ${ARGV_PYTHON_LAUNCH}")
message(STATUS "argv perl executable:    ${ARGV_PERL}")
message(STATUS "argv perl launch file:   ${ARGV_PERL_LAUNCH}")
message(STATUS "argv R executable:       ${ARGV_R}")
message(STATUS "argv R launch file:      ${ARGV_R_LAUNCH}")

configure_file(FileLocations.hxx.in ${CMAKE_CURRENT_BINARY_DIR}/FileLocations.hxx)
